[package]
edition = "2018"
name = "tiny_proxy"
version = "0.1.0"
authors = ["safiir <fullunull@gmail.com>"]
description = "a simple proxy dedicated for cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
#hyper-reverse-proxy = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
url = "2.2.2"
futures = "0.3.21"
hyper-proxy = "0.9.1"
chrono = "0.4"
nom = "7.1.1"
colored = "2.0.0"
tabled = { version = "0.8.0", features = ["color"] }
clap = { version = "3.1.17", features = ["derive"] }

[dependencies.lazy_static]
version = "1.4"

[dependencies.unicase]
version = "2.6"

